--- a/_posts/2017-11-13-Forty-Two.md
+++ b/_posts/2017-11-13-Forty-Two.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Forty two the answer for anything"
+title:  "Forty two the answer to everything"
 date:   2017-11-13 13:46:35 -0800
 categories: update
 ---
@@ -11,4 +11,3 @@ You know, when I turned 35 or something close. I was thinking about significant 
 
 I have to assume that I did not feel(think) this way today. I am just curious about my future and thinking that exactly 42 means,  I  did not mean my age, I  meant this strange number 42  the answer to everything.
 
- 
