--- a/_posts/2017-11-13-Forty-Two.md
+++ b/_posts/2017-11-13-Forty-Two.md
@@ -7,7 +7,7 @@ categories: update
 
 # Well, I turned 42.
 
-You know, when I turned 35 or something close. I was thinking about significant results I reached by this time, mostly about career advantages, illnesses, and my family.
+You know, when I turned 35 or something, I was thinking about significant results I achieved by this time, mostly about career advantages, ~~health~~ illnesses, and my family.
 
-I have to assume that I did not feel(think) this way today. I am just curious about my future and thinking that exactly 42 means,  I  did not mean my age, I  meant this strange number 42  the answer to everything.
+I have to admit that I did not feel(think) this way today. I am just curious about my future and thinking what exactly 42 means,  I  do not mean my age, I  mean this strange number "42",  the answer to everything.
 
